# python_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  _todo.rst  initialize.py  pyproject.toml  setup.cfg  setup.py
_docs/source/: conf.py  index.rst  usage.rst
_docs/source/.mypy_cache/3.9/: _ast.meta.json  _collections_abc.meta.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  genericpath.data.json  genericpath.meta.json  io.meta.json  mmap.data.json  mmap.meta.json  ntpath.data.json  ntpath.meta.json  posix.meta.json  posixpath.data.json  posixpath.meta.json  subprocess.data.json  subprocess.meta.json  sys.meta.json  types.meta.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
python_module/: p_flir_head.py
python_module/.mypy_cache/3.9/: _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  abc.data.json  abc.meta.json  array.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.meta.json  ntpath.meta.json  posix.data.json  posix.meta.json  posixpath.meta.json  subprocess.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.meta.json
python_module/.mypy_cache/3.9/_typeshed/: __init__.data.json  __init__.meta.json
python_module/.mypy_cache/3.9/collections/: __init__.data.json  __init__.meta.json
python_module/.mypy_cache/3.9/os/: __init__.meta.json  (+1 more)
scratchpad/: code.txt
src/: __init__.py  config.py  main.py
src/gui/: gui.py
src/gui/ui_sources/: mainwindow.py
src/log/: log.py
src/python_module/: __init__.py  p_flir_head.py
(+19 files in other folders)
